/*
 * $Id: ChangeLog,v 1.1786 2003/11/27 20:18:01 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-11-28 00:40 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/rdd/dbfntx/dbfntx1.c
  * source/rtl/fstemp.c
    * Include <unistd.h> on BSD to avoid warnings.
  * source/rtl/hbffind.c
    ! Don't try to closedir() in hb_fsFindClose() if a directory has not
      been open.
  * tests/Makefile
    ! Fixed to work on Darwin.

2003-11-27 21:21 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/error.ch
    + Added internal error 9026 "Memory corruption"

  * include/thread.h
    ! Cleanups and fixups;
      * The mutex type of PRG level mutexes are now Critical sections
      * PRG level locks are done via resource counting condition signal
      * Added a sign field to the Mutex type to avoid PRG going sefault
        for having passed wrong item type.
      + Added MutexTryLock() function.

2003-11-27 19:00 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/thread.h
    * rationlaized layout of sections
    + added macros to manages shared resources;
      HB_SHARED_LOCK( shared ) is more elegant than HB_MUTEX_LOCK( shared.Mutex )

  * source/vm/errorapi.c
  * source/vm/garbage.c
  * source/vm/thread.c
    * Changed code to match the new macros.

  * source/rtl/hblog.prg
  * source/rtl/hblognet.prg
  * source/rtl/trpc.prg
  * source/rtl/trpccli.prg
    - Removed "deprecated" DestroyMutex() calls

2003-11-27 14:18 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini@tin.it>
  * source/rtl/filesys.c
    + small modification to #ifdefs to support OpenWatcom
  * source/vm/itemapi.c
    + small modification to #ifdefs to support OpenWatcom
  * config/dos/watcom.cf
    + a smaller HB_FLAGS for OpenWatcom/DOS32 
  * config/w32/watcom.cf