@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1786 2003/11/27 20:18:01 jonnymind Exp $
+ * $Id: ChangeLog,v 1.1787 2003/11/27 21:44:52 likewolf Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-11-28 00:45 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
+  * source/vm/thread.c
+    ! fixes for windows compilation
+    ! Algorithm for subscribe/notify was a little outshaped. Finetuned.
+
+  * tests/mtcomplex.prg
+    * more fancy counters that exploits the subscription better.
 
 2003-11-28 00:40 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
   * source/rdd/dbfntx/dbfntx1.c
@@ -23,6 +31,7 @@
     + Added internal error 9026 "Memory corruption"
 
   * include/thread.h
+  * source/vm/thread.c
     ! Cleanups and fixups;
       * The mutex type of PRG level mutexes are now Critical sections
       * PRG level locks are done via resource counting condition signal
